tests/expectations/compiler/dynamic_dispatch/dynamic_storage_vector_bare_read_fail.out
Error [ETYC0372156]: `entries` is a vector storage variable; read an element with `test.aleo::Logs::entries.get(index)`.
    --> compiler-test:13:19
     |
  13 |     let v: u64? = Logs@(target)::entries;
     |                   ^^^^^^^^^^^^^^^^^^^^^^
